examples/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations: 
    http.port: "99"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: nginx-service
          servicePort: 80
