examples/ingressWithCert.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  tls:
  - secretName: foo
  backend:
    serviceName: nginx-service
    servicePort: 80
