examples/ingressWithCustomPort.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
  annotations:
    http.port: "90"
spec:
  backend:
    serviceName: nginx-service
    servicePort: 80
