examples/ingressWithDefaultService.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  backend:
    serviceName: nginx-service
    servicePort: 80
